--- a/src/locale/zh-CN.json
+++ b/src/locale/zh-CN.json
@@ -1,6 +1,12 @@
 {
     "homepage": {
-        "welcome": "未来欢迎您！"
+        "welcome": "未来欢迎您！",
+        "buy_button": "购买",
+        "sell_button": "出售",
+        "claim_button": "分红",
+        "buy": "购买",
+        "sell": "出售",
+        "claim": "收取分红"
     },
     "user": {
         "register": {
