--- a/src/locale/zh-CN.json
+++ b/src/locale/zh-CN.json
@@ -35,7 +35,7 @@
         }
     },
     "navbar": {
-        "market": "市场",
+        "faq": "常见问题",
         "app store": "DApp 商店",
         "theme": "主题",
         "home": "首页",
