fix: should be 合约余额

--- a/src/locale/en-US.json
+++ b/src/locale/en-US.json
@@ -1,6 +1,7 @@
 {
     "homepage": {
-        "welcome": "Welcome to the decentralized future"
+        "welcome": "Welcome to the decentralized future",
+        "contract_balance": "Contract Balance"
     },
     "user": {
         "register": {
