--- a/src/locale/zh-CN.json
+++ b/src/locale/zh-CN.json
@@ -11,9 +11,10 @@
         "buy_title": "确认购买",
         "sell_title": "确认卖出",
         "wallet_balance": "我的余额",
-        "contract_balance": "合约里资金",
+        "contract_balance": "合约资金",
         "user_addr": "我的地址",
-        "current_price": "当前价格"
+        "current_price": "当前价格",
+        "tx_rejected_msg": "您已取消交易"
     },
     "user": {
         "register": {
