add event in list.add some tries.

--- a/src/locale/en-US.json
+++ b/src/locale/en-US.json
@@ -18,6 +18,7 @@
     },
     "history": {
         "player": "player",
+        "event": "event",
         "amount": "amount",
         "price": "price",
         "time": "time"
