--- a/src/locale/zh-CN.json
+++ b/src/locale/zh-CN.json
@@ -15,7 +15,7 @@
         "contract_claim_balance": "分红池",
         "contract_bonus_balance": "奖金池",
         "my_claim_balance": "我的分红",
-        "user_addr": "我的地址",
+        "user_addr": "我的钱包",
         "current_price": "当前价格",
         "tx_rejected_msg": "您已取消交易"
     },
