--- a/src/locale/zh-CN.json
+++ b/src/locale/zh-CN.json
@@ -16,6 +16,7 @@
         "contract_bonus_balance": "奖金池",
         "my_claim_balance": "我的分红",
         "user_addr": "我的钱包",
+        "my_token" : "我的水晶",
         "current_price": "当前价格",
         "tx_rejected_msg": "您已取消交易"
     },
