fix data source

--- a/src/locale/zh-CN.json
+++ b/src/locale/zh-CN.json
@@ -12,7 +12,7 @@
         "sell_title": "确认卖出",
         "wallet_balance": "我的余额",
         "contract_balance": "合约资金",
-        "contract_claim_balance": "分红池",
+        "contract_claim_balance": "产生总分红",
         "contract_bonus_balance": "奖金池",
         "my_claim_balance": "我的分红",
         "user_addr": "我的钱包",
